data/derived/sp14/progs/unify/prog3395.ml.out
Characters 84-101:
  | (h::t) -> myListReverse t h::newList;;
              ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
